--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Spiderman</title>
+  <link href="https://fonts.googleapis.com/css?family=Spectral" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
 
   <header>
-    <h1 class="title">Spiderman</h1>
-    <img class="title-img" src="images/logo.png" alt="Logo" />
-    <p class="title-cite">Un gran poder conlleva una gran responsabilidad</p>
+    <div class="title-and-cite">
+      <h1 class="title">Spider-man</h1>
+      <p class="title-cite">Un gran poder conlleva una gran responsabilidad</p>
+    </div>
+    <div class="title-img"></div>
   </header>
 
   <nav class="navbar">
