--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contacto</title>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA-jpiiZm0kg4wbYwPvUtNZvyLbiNcz6p8"></script>
+  <script>
+    function initialize() {
+      var myLatLng = {lat: 42.762480, lng: -83.283406};
+
+        var mapProp = {
+          center:myLatLng,
+          zoom:15,
+          mapTypeId:google.maps.MapTypeId.ROADMAP
+        };
+        var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: "Aqui estamos"
+        });
+    }
+    google.maps.event.addDomListener(window, "load", initialize);
+  </script>
+  <link href="https://fonts.googleapis.com/css?family=Spectral" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" href="styles/grid.css">
 </head>
 <body>
 
@@ -31,12 +54,13 @@
     </ul>
   </nav>
 
-  <main>
-    <section class="contact">
+  <main class="container">
+    <section class="contact section-container">
       <h2>Contacta con nosotros</h2>
-      <div>
-        <div>Aquí va un mapa</div>
-        <div>
+      <div class="row">
+        <div class="col-6" id="googleMap">
+        </div>
+        <div class="col-6">
           <div class="form">
             <form name="contacto" method="get" action="">
               <div class="form-row">
@@ -79,30 +103,33 @@
         </div>
       </div>
     </section>
-    <section class="product-price">
+    <section class="product-price section-container">
       <table>
         <thead>
           <tr>
             <th>Tipo de servicio</th>
             <th>Precio</th>
           </tr>
+        </thead>
+        <tbody>
           <tr>
             <td>Consulta de misión</td>
-            <td>100€</td>
+            <td>100 €</td>
           </tr>
           <tr>
             <td>Misión simple</td>
-            <td>500€</td>
+            <td>500 €</td>
           </tr>
           <tr>
             <td>Rescate</td>
-            <td>1000€</td>
+            <td>1.000 €</td>
           </tr>
           <tr>
-            <td>Salvar New York</td>
-            <td>15.000€</td>
+            <td>Salvar Gotham</td>
+            <td>15.000 €</td>
           </tr>
-        </thead>
+        </tbody>
+    </table>
       </table>
     </section>
   </main>
