--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
               <h4>Tío de Peter Parker y filósofo</h4>
             </header>
             <figure class="team-member-photo">
-              <img src="images/ben.jpg" alt="John J. Jameson">
+              <div class="flip">
+                <div class="front flip-img">
+                  <img src="images/ben.jpg">
+                </div>
+                <div class="back flip-img">
+                  <img src="images/ben2.jpg">
+                </div>
+              </div>
               <figcaption>
                 Clifford Robertson
               </figcaption>
