--- a/contact.html
+++ b/contact.html
@@ -135,6 +135,7 @@
     </section>
   </main>
 
+  <script src="./js/notifications.js"></script>
   <script src="./js/form.js"></script>
   
 </body>
