--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <a href="contact.html">Contacto</a>
       </li>
       <li class="navbar-item">
-        <a href="">Tareas</a>
+        <a href="tasks.html">Tareas</a>
       </li>
     </ul>
   </nav>
@@ -130,13 +130,12 @@
             <td>15.000 €</td>
           </tr>
         </tbody>
-    </table>
       </table>
     </section>
   </main>
 
   <script src="./js/notifications.js"></script>
   <script src="./js/form.js"></script>
-  
+  <script src="./js/ajax.js"></script>
 </body>
 </html>
