--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="contact.html">Contacto</a>
       </li>
       <li class="navbar-item">
-        <a href>Tareas</a>
+        <a href="tasks.html">Tareas</a>
       </li>
     </ul>
   </nav>
@@ -46,7 +46,7 @@
   <main class="container">
     <section class="about-me clearfix section-container" id="quien-soy">
       <div class="spiderman-video">
-        <video width="550" height="300" controls>
+        <video id="video" width="550" height="300" controls>
           <source src="video/video.mp4" type="video/mp4">
           No soportado
         </video>
@@ -149,7 +149,8 @@
     Pablo Varela © 2017
   </footer>
   
-  <script src="js/menu.js"></script>
-  <script src="js/animation.js"></script>
+  <script src="./js/menu.js"></script>
+  <script src="./js/animation.js"></script>
+  <script src="./js/full-screen.js"></script>
 </body>
 </html>
